@@ -17,7 +17,12 @@ Build-Depends:
  quilt,
  automake,
  libtool,
- xutils-dev (>= 1:7.5~1)
+ xutils-dev (>= 1:7.5~1),
+# specs
+ groff,
+ ghostscript,
+ netpbm,
+ psutils,
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/pkg-xorg/lib/libx11
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/lib/libx11.git
