@@ -3,3 +3,4 @@ usr/share/man/man3/*
 usr/lib/libX11.a
 usr/lib/libX11.so
 usr/lib/pkgconfig/x11.pc
+usr/share/doc/libX11/* usr/share/doc/libx11-dev
